# swarm_provenance_CLI

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: chain-setup.md  chain-workflows.md  x402-setup.md
examples/: README.md
examples/01-basic-upload-download/: README.md  demo.sh  run_demo.py  sample.txt
examples/02-audit-trail/: README.md  audit_log.json  audit_record_001.json  audit_record_002.json  audit_record_003.json  compliance_record.json  demo.sh  run_demo.py
examples/03-scientific-data/: README.md  dataset_metadata.json  demo.sh  experiment_results.csv  run_demo.py
examples/04-batch-processing/: README.md  batch_upload.py  demo.sh  run_demo.py
examples/04-batch-processing/sample_files/: log_001.txt  log_002.txt  log_003.txt  log_004.txt  log_005.txt  log_entry_001.json  log_entry_002.json  log_entry_003.json
examples/05-encrypted-data/: README.md  decrypt_download.py  demo.sh  encrypt_upload.py  run_demo.py  sensitive_data.txt
examples/06-market-memory/: README.md  create_memory_unit.py  demo.sh  memory_unit.json  observation_001.json  prediction_001.json  run_demo.py  verify_memory_unit.py
examples/07-stamp-management/: README.md  demo.sh  run_demo.py  sample_data.txt  stamp_lifecycle.py
examples/08-ci-cd-integration/: README.md  archive_artifacts.py  demo.sh  github-action.yml  gitlab-ci.yml  run_demo.py
examples/08-ci-cd-integration/sample_artifacts/: build_info.json  release_notes.txt
examples/09-verification/: README.md  demo.sh  integrity_checker.py  run_demo.py  sample_document.txt  sample_document_tampered.txt  tamper_detection.py
examples/common/: __init__.py  sample_generator.py  verify.py
swarm_provenance_uploader/: __init__.py  cli.py  config.py  exceptions.py  models.py
swarm_provenance_uploader/chain/: __init__.py  contract.py  event_cache.py  exceptions.py  provider.py  wallet.py
swarm_provenance_uploader/chain/abi/: DataProvenance.json
swarm_provenance_uploader/core/: chain_client.py  file_utils.py  gateway_client.py  notary_utils.py  x402_client.py
tests/: conftest.py  test_chain_client.py  test_cli.py  test_examples.py  test_file_utils.py  test_gateway_client.py  test_integration.py  test_notary_utils.py  test_x402_client.py
