[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-provenance-uploader"
version = "0.3.0"
description = "A CLI toolkit for wrapping data and uploading to Swarm."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"} # Add a LICENSE.txt if you wish
classifiers = [
    "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "click>=8.1.0,<8.2.0", # Pin click to a compatible range
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
# This creates the command-line tool name
swarm-prov-upload = "swarm_provenance_uploader.cli:app"

[project.optional-dependencies]
testing = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "requests-mock>=1.11"
]
# x402 payment support (USDC on Base chain)
x402 = [
    "x402>=0.1.0",
    "eth-account>=0.8.0",
    "web3>=6.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (hit real backends)",
    "local_bee: marks tests that require local Bee node",
    "gateway: marks tests that require gateway service",
]
